--- a/signup.css
+++ b/signup.css
@@ -17,7 +17,7 @@ body {
     font-size:46px;
     font-family:Wellfleet;
     text-shadow: 3px -1px 2px rgba(150, 150, 150, 0.95);
-    color:#404040;
+    color:#aaa;
 }
 
 .sign-up {
@@ -110,44 +110,23 @@ input {
   line-height: 48px;
 }
 
-.sign-up-button1 {
+.sign-up-button {
   position: relative;
   vertical-align: top;
   width: 100%;
   height: 54px;
-  padding: 0;
+  padding: 0px;
   font-size: 22px;
   color: white;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
   background: #f0776c;
-  border:0;
+  border: 0;
   border-bottom: 2px solid #d76b60;
   border-radius: 5px;
   cursor: pointer;
   -webkit-box-shadow: inset 0 -2px #d76b60;
   box-shadow: inset 0 -2px #d76b60;
-  margin-bottom: 10;
-}
-
-.sign-up-button2{
-  position: relative;
-  vertical-align: top;
-  width: 100%;
-  height: 54px;
-  padding: 0;
-  font-size: 22px;
-  color: white;
-  text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-  background: #f0776c;
-  border:0;
-  border-bottom: 2px solid #d76b60;
-  border-radius: 5px;
-  cursor: pointer;
-  -webkit-box-shadow: inset 0 -2px #d76b60;
-  box-shadow: inset 0 -2px #d76b60;
-  margin-top: 10;
 }
 
 .sign-up-button:active {
